--- a/packages/cli/src/commands/new/templates/app/block/routes/index.tsx.hbs
+++ b/packages/cli/src/commands/new/templates/app/block/routes/index.tsx.hbs
@@ -26,7 +26,7 @@ export const IndexPage = () => {
         </li>
         <li>
           <a
-            href="https://github.com/Tinkoff/tramvai"
+            href="https://github.com/tramvaijs/tramvai"
             target="_blank"
             rel="noreferrer"
           >
