--- a/packages/cli/src/commands/new/templates/app/multirepo/tramvai.json.hbs
+++ b/packages/cli/src/commands/new/templates/app/multirepo/tramvai.json.hbs
@@ -6,6 +6,10 @@
       "root": "src",
       "type": "application",
       "sourceMap": true,
+      "sourceMap": {
+        "development": false,
+        "production": true
+      },
       "postcss": {
         "config": "src/postcss"
       },
