--- a/packages/cli/src/commands/new/templates/app/monorepo/README.md.hbs
+++ b/packages/cli/src/commands/new/templates/app/monorepo/README.md.hbs
@@ -4,7 +4,7 @@
 
 ## Install dependencies
 
-Run installation with selected package manager {{#if isNpm}}`npm install`{{else}}`yarn`{{/if}}
+Run installation with selected package manager {{#if isNpm}}`npm install`{{else if isYarn}}`yarn`{{else}}`pnpm install`{{/if}}
 
 ## Usage
 
