--- a/packages/cli/src/commands/new/templates/app/testing/jest/jest.config.ts.hbs
+++ b/packages/cli/src/commands/new/templates/app/testing/jest/jest.config.ts.hbs
@@ -2,7 +2,11 @@ import type { Config } from '@jest/types';
 
 const config: Config.InitialOptions = {
   preset: '@tramvai/test-unit-jest',
-  testPathIgnorePatterns: ['node_modules/', '__integration__'],
+  testPathIgnorePatterns: [
+    'node_modules/',
+    '__integration__',
+    '__playwright__',
+  ],
 };
 
 // eslint-disable-next-line import/no-default-export
