--- a/packages/cli/src/commands/new/templates/shared/package.json.hbs
+++ b/packages/cli/src/commands/new/templates/shared/package.json.hbs
@@ -9,8 +9,7 @@
     "lint": "eslint --ext .ts,.tsx --ignore-path .gitignore ."{{#if isJest}},
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
-    "test:integration": "jest -w=3 --config ./jest.integration.config.ts",
-    "test:integration:watch": "jest --runInBand --watch --config ./jest.integration.config.ts"{{/if}}
+    "test:integration": "playwright test"{{/if}}
   },
   "devDependencies": {},
   "dependencies": {},
