--- a/packages/cli/src/commands/new/templates/shared/package.json.hbs
+++ b/packages/cli/src/commands/new/templates/shared/package.json.hbs
@@ -22,5 +22,6 @@
     "*.{js,jsx,ts,tsx}": [
       "eslint --fix"
     ]
-  }
+  }{{#if workspaceBaseDir}},
+  "workspaces": ["{{workspaceBaseDir}}/*"]{{/if}}
 }
