--- a/packages/cli/src/commands/new/templates/shared/_gitignore.hbs
+++ b/packages/cli/src/commands/new/templates/shared/_gitignore.hbs
@@ -8,6 +8,16 @@ yarn-error.log*
 # Dependency directories
 node_modules/
 
+.yarn-cache
+.yarn/*
+**/.yarn/*
+!.yarn/releases
+!.yarn/patches
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+
+
 # IDE
 .DS_Store
 .vscode
