--- a/packages/cli/src/commands/new/templates/shared/package.json.hbs
+++ b/packages/cli/src/commands/new/templates/shared/package.json.hbs
@@ -9,7 +9,7 @@
     "start": "tramvai start {{configEntry.name}}",
     "build": "tramvai build {{configEntry.name}}",
     "preview": "tramvai start-prod {{configEntry.name}}",
-    "analyze": "tramvai analyze {{configEntry.name}}",
+    "analyze": "tramvai {{configEntry.name}} --analyze=statoscope",
     "lint": "eslint --ext .ts,.tsx --ignore-path .gitignore ."{{#if isJest}},
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
