--- a/packages/cli/src/commands/new/templates/app/block/shared/header/Header.spec.tsx.hbs
+++ b/packages/cli/src/commands/new/templates/app/block/shared/header/Header.spec.tsx.hbs
@@ -4,10 +4,12 @@
 import { testComponent } from '@tramvai/test-react';
 import { Header } from './Header';
 
-it('should render header', () => {
-  const { render } = testComponent(<Header />);
+describe('Header', () => {
+  it('should render header', () => {
+    const { render } = testComponent(<Header />);
 
-  expect(render.container.innerHTML).toMatchInlineSnapshot(
-    `"<header class="Header"><h1>Tramvai <span role="img" aria-label="Salute">🥳</span></h1></header>"`
-  );
+    expect(render.container.innerHTML).toMatchInlineSnapshot(
+      `"<header class="Header"><h1>Tramvai <span role="img" aria-label="Salute">🥳</span></h1></header>"`
+    );
+  });
 });
